# ostree-push

./: .flake8  .gitignore  MANIFEST.in  Makefile  NEWS  README.md  TODO  ostree-push  ostree-receive  ostree-receive.conf  protocol.md  pushlib.py  pytest.ini  setup.cfg  tox.ini
.github/workflows/: tests.yml
otpush/: __init__.py  push.py  receive.py  receive_legacy.py
scripts/: ostree-receive  ostree-receive-0  ostree-receive-shell
tests/: conftest.py  dumpenv  ostree-push  ostree-receive  ostree-receive-0  ostree-receive-1  test_full.py  test_push.py  test_receive.py  test_receive_legacy.py  test_receive_shell.py  test_sshd.py  util.py
tests/data/: host_rsa_key  host_rsa_key.pub  id_rsa  id_rsa.pub  pgp-key.asc  pgp-pub.asc  pgp-pub.gpg  sshd_config
