[metadata]
name = ostree-push
version = attr: otpush.VERSION
author = Dan Nicholson
author_email = dbn@endlessos.org
description = Push and receive OSTree commits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbnicholson/ostree-push
license_file = COPYING
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Development Status :: 4 - Beta
  License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
  Operating System :: POSIX
  Topic :: Software Development :: Build Tools
  Topic :: System :: Archiving :: Packaging
  Topic :: System :: Software Distribution

[options]
packages = otpush
scripts = scripts/ostree-receive-shell
install_requires =
  PyGObject
python_requires = >=3.6

[options.entry_points]
console_scripts =
  ostree-push = otpush.push:main
  ostree-receive = otpush.receive:main
