[metadata]
name = ostree-push
version = attr: otpush.VERSION
author = Dan Nicholson
author_email = dbn@endlessos.org
description = Push and receive OSTree commits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbnicholson/ostree-push
license_file = COPYING
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
  Operating System :: POSIX
  Topic :: Software Development :: Build Tools
  Topic :: System :: Archiving :: Mirroring
  Topic :: System :: Archiving :: Packaging
  Topic :: System :: Software Distribution

[options]
packages = otpush
scripts = scripts/ostree-receive-shell
install_requires =
  PyGObject
  PyYAML
python_requires = >=3.7

[options.entry_points]
console_scripts =
  ostree-push = otpush.push:main
  ostree-receive = otpush.receive:main
  # Keep this suffix in sync with the major version. When changing it,
  # add the updated name to the list of receive shell allowed commands.
  ostree-receive-1 = otpush.receive:main
  # FIXME: Delete this after giving time to migrate clients.
  ostree-receive-0 = otpush.receive_legacy:main
